Adding Graph and HashMap

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,6 +4,8 @@ add_subdirectory(CompetitiveProgramming)
 add_subdirectory(CTCI)
 add_subdirectory(DesignPattern)
 add_subdirectory(DS)
+add_subdirectory(Graph)
+add_subdirectory(HashMap)
 add_subdirectory(STL_Style_DS)
 add_subdirectory(ThreadPool)
 add_subdirectory(Threads)
