Adding Finite State Machine

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,6 +4,7 @@ add_subdirectory(CompetitiveProgramming)
 add_subdirectory(CTCI)
 add_subdirectory(DesignPattern)
 add_subdirectory(DS)
+add_subdirectory(FiniteStateMachine)
 add_subdirectory(Graph)
 add_subdirectory(HashMap)
 add_subdirectory(STL_Style_DS)
